--- a/README.html
+++ b/README.html
@@ -32,7 +32,7 @@
 <ul>
 <li>Vorlesung &quot;Stochastik&quot; bei Frau Prof. Behme im Sommersemester 2019 / <em>Lecture &quot;Stochastics&quot;</em></li>
 <li>Vorlesung &quot;Optimierung &amp; Numerik&quot; bei Dr. John Martinovic im Wintersemester 2019/20 / <em>Lecture &quot;Optimisation &amp; Numerical Mathematics&quot;</em></li>
-<li>Vorlesung &quot;Modellierung &amp; Simulation&quot; bei Prof. Walther im Wintersemester 2019/20 / <em>Lecture &quot;Modelling and Simulation&quot;</em></li>
+<li>Vorlesung &quot;Vertiefung in der Stochastik - Diskrete Finanzmathematik&quot; bei Prof. Keller-Ressel im Wintersemester 2019/20 / <em>Lecture &quot;Discrete Mathematical Finance&quot;</em></li>
 </ul>
 <p>Bereits fertig gestellte &#xDC;bungen und Hausaufgaben / <em>Already finished tutorials and homework</em>:</p>
 <ul>
